<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_info"
        android:textColor="@color/colorPrimary"/>

    <EditText
        android:id="@+id/edit_gasolina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:hint="@string/hint_gasolina"
        android:ems="10"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/edit_etanol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="30dp"
        android:hint="@string/hint_etanol"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/bt_comparar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@color/colorAccent"
        android:onClick="calcular"
        android:text="@string/bt_comparar"
        android:textColor="@color/design_default_color_background" />

    <TextView
        android:id="@+id/text_resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_resultado"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/text_exibir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textColor="@color/colorPrimary" />

</LinearLayout>